# power-macro

./: CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json  tsconfig.json
Inc/: DelayInteraction.h  FileOperations.h  Interaction.h  InteractionQueue.h  KeyboardInteraction.h  Midware.h  MouseInteraction.h
Inc/Inc/: FileOperations.h  MacroFileProc.h
Inc/Src/: FileOperations.cpp  MacroFileProc.cpp
Src/: DelayInteraction.cpp  Interaction.cpp  InteractionQueue.cpp  KeyboardInteraction.cpp  MacroFileProc.cpp  MouseInteraction.cpp
native/addon/Inc/: DelayInteraction.h  Interaction.h  KeyboardInteraction.h
native/addon/Src/: FileOperations.cpp  Interaction.cpp  InteractionQueue.cpp  KeyboardInteraction.cpp
power-macro/: commands.txt  package.json
power-macro/addon/Inc/: InteractionQueue.h  MacroFileProc.h  Midware.h  MouseInteraction.h
power-macro/addon/Src/: DelayInteraction.cpp  MouseInteraction.cpp
power-macro/src/: index.css  index.html  index.ts  macroProc.js
power-macro/src/native/pm-win-api/: pm-win-api.exp  pm-win-api.lib  pm-win-api.node  src_lib.lib
src/: main.ts
